# insurance-interactions

./: CHANGELOG.md  README.md  pyproject.toml  run_benchmark_30features.py  run_benchmark_50features.py  run_qa_tests.py
benchmarks/: benchmark.py  benchmark_30features.py  benchmark_50features.py
databricks/: benchmark.py
notebooks/: benchmark.py  benchmark_30features.py  interaction_detection_demo.py  run_benchmark_50features.py
src/insurance_interactions/: __init__.py  cann.py  glm_builder.py  nid.py  selector.py  shap_interactions.py
tests/: conftest.py  run_tests_databricks.py  submit_databricks_tests.py  test_cann.py  test_cann_extended.py  test_detector_config_validation.py  test_glm_builder.py  test_glm_builder_extended.py  test_nid.py  test_nid_extended.py  test_selector.py  test_selector_extended.py  test_shap_interactions.py
