[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-interactions"
version = "0.1.5"
description = "Automated GLM interaction detection for UK personal lines insurance using CANN + NID"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "insurance",
    "pricing",
    "GLM",
    "interactions",
    "CANN",
    "NID",
    "SHAP",
    "actuarial",
    "UK",
    "motor",
    "personal-lines",
    "Poisson",
    "Gamma",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "polars>=1.0",
    "scipy>=1.10",
    "glum>=2.7",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
]
shap = [
    "shapiq>=0.1",
    "catboost>=1.2",
]
plots = [
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "pyarrow>=12.0",
    "pytest-cov>=4.0",
    "torch>=2.0",
]

[project.urls]
Repository = "https://github.com/burning-cost/insurance-interactions"
Issues = "https://github.com/burning-cost/insurance-interactions/issues"
Homepage = "https://github.com/burning-cost/insurance-interactions"
Documentation = "https://github.com/burning-cost/insurance-interactions#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_interactions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
